[tool.poetry]
name = "repl_python3_creative-discord-bot-1"
version = "0.1.0"
description = ""
authors = ["jeremy-serenne <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
Flask = "^2.0.2"
pytz = "^2021.3"
replit = "^3.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
